--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.6",
+    "fabric": "^6.5.1",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
@@ -27,11 +29,14 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
+    "konva": "^9.3.16",
+    "less": "^4.2.0",
     "npm-run-all2": "^6.2.3",
     "prettier": "^3.3.3",
-    "typescript": "~5.5.4",
+    "typescript": "4.9.4",
     "vite": "^5.4.8",
     "vite-plugin-vue-devtools": "^7.4.6",
+    "vite-plugin-windicss": "^1.9.3",
     "vue-tsc": "^2.1.6"
   }
 }
