--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "ant-design-vue": "^4.2.6",
+    "ant-design-vue": "3.2.15",
+    "echarts": "^5.6.0",
     "fabric": "^6.5.1",
-    "vue": "^3.5.11",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.4.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -32,11 +34,12 @@
     "konva": "^9.3.16",
     "less": "^4.2.0",
     "npm-run-all2": "^6.2.3",
-    "prettier": "^3.3.3",
+    "prettier": "2.6.2",
     "typescript": "4.9.4",
-    "vite": "^5.4.8",
+    "vite": "4.3.9",
     "vite-plugin-vue-devtools": "^7.4.6",
     "vite-plugin-windicss": "^1.9.3",
+    "vue-component-type-helpers": "^2.2.8",
     "vue-tsc": "^2.1.6"
   }
 }
